# bus-zeiterfassung

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: Dienstzeitblatt_template.xlsx
docs/: template-mapping.md
src/bus_zeiterfassung/: auth.py  config.py  db.py  main.py  models.py  templating.py  timeutil.py
src/bus_zeiterfassung/routes/: entries.py  export.py  pages.py
src/bus_zeiterfassung/services/: excel.py  pdf.py
src/bus_zeiterfassung/static/: manifest.webmanifest
src/bus_zeiterfassung/templates/: base.html  login.html  month.html  today.html
src/bus_zeiterfassung/templates/partials/: month_row.html  today_card.html
tests/: conftest.py  test_entries.py  test_excel.py  test_pdf.py
